<resources>
    <string name="app_name">SyncVision</string>
    <string name="index_text1">Imagine. Create. Share</string>
    <string name="index_text2">Where ideas transform into reality, connections flourish, and creativity knows no limits.</string>
    <string name="index_text3">Let`s get started!</string>
    <string name="login_text1">Let`s get you Login!</string>
    <string name="login_text2">Enter Information below</string>
    <string name="login_text3">Enter Email</string>
    <string name="login_text4">Enter Password</string>
    <string name="login_text5">Recover Password?</string>
    <string name="login_text6">Sign In</string>
    <string name="login_text7">Don`t have an account?</string>
    <string name="login_text8">Let`s Register</string>
    <string name="register_text1">Register</string>
    <string name="register_text2">Enter full name</string>
    <string name="register_text3">Enter email</string>
    <string name="register_text4">Enter password</string>
    <string name="register_text5">Confirm password</string>
    <string name="register_text6">Already have an account?</string>
    <string name="register_text7">Login</string>

</resources>